--- a/static/index.html
+++ b/static/index.html
@@ -59,7 +59,7 @@
         
         <h2>Доступные сервисы:</h2>
         <ul class="links">
-            <li><a href="/git/">Git репозитории</a></li>
+            <li><a href="/">Git репозитории</a></li>
         </ul>
         
         <h2>Информация о контейнере:</h2>
@@ -67,7 +67,7 @@
             <li><strong>Nginx:</strong> stable-perl</li>
             <li><strong>FastCGI:</strong> fcgiwrap</li>
             <li><strong>Git:</strong> HTTP backend</li>
-            <li><strong>Порты:</strong> 80, 443</li>
+            <li><strong>Порты:</strong> 80</li>
         </ul>
     </div>
 </body>
