minor index changes

--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
         
         <h2>Информация о контейнере:</h2>
         <ul>
-            <li><strong>Nginx:</strong> stable-perl</li>
+            <li><strong>Image:</strong> Debian 12</li>
             <li><strong>FastCGI:</strong> fcgiwrap</li>
             <li><strong>Git:</strong> HTTP backend</li>
             <li><strong>Порты:</strong> 80</li>
